--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-Hello cruel woild.
+<h1>Welcome to the WoodenWebLog</h1>
+<p>
+  <%= link_to 'Go to all Articles', articles_path %> |
+  <%= link_to 'About Page', about_path %>
+</p>
