--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,15 @@
 <h1>Articles Listing Page</h1>
+<p>
+  <%= link_to 'Return to Home Page', root_path %>
+  <%= link_to 'Visit the About Page', about_path %> |
+</p>
 
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Actions</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -14,9 +18,15 @@
       <tr>
         <td><%=article.title%></td>
         <td><%=article.description%></td>
-        <td>Placeholder</td>
-        
+        <td><%= link_to 'Show', article_path(article) %></td>
+        <td><%= link_to 'Edit', edit_article_path(article) %></td>
+        <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
       </tr>
     <% end %>
+
   </tbody>
 </table>
+<p>
+  <%= link_to 'Go to all Articles', articles_path %> |
+  <%= link_to 'Create New Article', new_article_path %>
+</p>
