add styling and links to Article Listing Page, NavBar and Footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= render'layouts/messages' %>
+  <body class='d-flex flex-column h-100 bg-light'>
+    <%= render 'layouts/navigation' %>
+    <%= render 'layouts/messages' %>
     <%= yield %>
+    
   </body>
 </html>
