--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,21 @@
-<h1>Welcome to the WoodenWebLog</h1>
+<!--
 <p>
   <%= link_to 'Go to all Articles', articles_path %> |
   <%= link_to 'About Page', about_path %>
 </p>
+ -->
+<main class="flex-shrink-0 ">
+  <div class="container-fluid">
+    <div class="p-5 m-4 rounded-3 center" id="jumbotron" >
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold text-white">Wooden Web Log</h1>
+        <p class="col-md-8 mx-auto text-white">The wooden web log is dedicated to wood working and sharing knowledge.</p>
+        <p class="col-md-6mx-auto text-white">We are a community of woodworkers and makers working together to build...</p>
+        <button class="btn btn-primary btn-lg" type="button">Sign Up</button>
+      </div>
+    </div>
+  </div>
+</main>
+<%= render 'layouts/footer' %>
+
+  
