--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,3 @@
-<h1>Create a New Article</h1>
-<%= render 'form' %>
 
-<button><%= link_to 'Return to all Articles', articles_path %></button>
+  <h1 class="text-center mt-4">New Article</h1>
+  <%= render 'form' %>
