--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,12 @@
-<h1>WoodenWebLog About Page</h1>
-<p>
-  <%= link_to 'Go to all Articles', articles_path %> |
-  <%= link_to 'Return to Home Page', root_path %>
-</p>
+<main class="flex-shrink-0 ">
+  <div class="container-fluid">
+    <div class="p-5 m-4 rounded-3 center" >
+      <div class="container-fluid py-5">
+        <h2 class="display-5 fw-bold text-dark">The Wooden Web Log About Page</h2>
+        <p class="col-md-8 mx-auto text-dark">The wooden web log was built so woodworkers and hobbyist could share knowledge and display their work.</p>
+        <p class="col-md-6mx-auto text-dark">We are a community of woodworkers and makers working together to build...</p>
+
+      </div>
+    </div>
+  </div>
+</main>
