--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Article</h1>
 
-<%= render 'form' %>
-<button><%= link_to 'Cancel and return to all Articles', articles_path %></button>
+  <h1 class="text-center mt-4">Edit Article</h1>
+
+  <%= render 'form' %>
