--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,25 @@
-<h1>Show Articles</h1>
-<p>Title: <%=@article.title%></p>
-<p>Description: <%=@article.description%></p>
+<h2 class="text-center mt-4"> <%=@article.title%></h2>
+<div class="container text-center">
+  <div class="row justify-content-md-center ">
+    <div class="col-8 mt-4">
+      <div class="container ">
+        <div class="card text-center shadow mb-5 bg-body rounded">
+          <div class="card-header bg-secondary text-white">
+            <em>by Authors Name</em>
+          </div>
+          <div class="card-body ">
+            <div class="card-text text-left"><%=simple_format(@article.description)%></div>
+            <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
+            <%= link_to 'Delete', article_path(@article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+          </div>
+          <div class="card-footer bg-secondary text-white-50 ">
+            <small>Created <%= time_ago_in_words(@article.created_at) %> ago -- Updated <%=time_ago_in_words(@article.updated_at) %> ago</small>
+          </div>
+        </div>
+      </div>   
+    </div>
+  </div>
+</div>
+  <!--
 
-<br>
-<p>
-<%= link_to 'Edit', edit_article_path(@article) %> | 
-<%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "Are you sure?"} %> |
-<%= link_to 'Return to all Articles', articles_path %>
-</p>
+  -->
