--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,31 +15,28 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Articles", articles_path, class: "nav-link text-white"%>
+          <%#= link_to "Articles", articles_path, class: "nav-link text-white"%>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+        
         <li class="nav-item dropdown">
           <a
-            class="nav-link dropdown-toggle"
+            class="nav-link dropdown-toggle text-white"
             href="#"
             role="button"
-            data-bs-toggle="dropdown"
+            data-toggle="dropdown"
             aria-expanded="false"
           >
-            Dropdown
+            Articles
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><%= link_to "Articles", articles_path, class: "dropdown-item"%></li>
+            <li><%= link_to "New", new_article_path, class: "dropdown-item" %></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><%= link_to "Home", root_path, class: "dropdown-item" %>
+            <li><%= link_to "About", about_path, class: "dropdown-item" %>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
+        
       </ul>
       <form class="d-flex" role="search">
         <input
