--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
       <div class="container ">
         <div class="card text-center shadow mb-5 bg-body rounded">
           <div class="card-header bg-secondary text-white">
-            <em>by Authors Name</em>
+            <em>by <%= article.user.username if article.user %></em>
           </div>
           <div class="card-body ">
             <h5 class="card-title "><%=link_to article.title, article_path(article), class: "text-success" %></h5>
