--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
       <div class="container ">
         <div class="card text-center shadow mb-5 bg-body rounded">
           <div class="card-header bg-secondary text-white">
-            <em>by Authors Name</em>
+            <em>by <%= @article.user.username if @article.user %></em>
           </div>
           <div class="card-body ">
             <div class="card-text text-left"><%=simple_format(@article.description)%></div>
