--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,9 @@
     <li class="nav-item">
       <%= link_to "About", about_path, class: "nav-link text-white" %>
     </li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Features</a></li>
+    <li class="nav-item">
+      <%= link_to "Sign Up", signup_path, class: "nav-link text-white" %>
+    </li>
    
     <li class="nav-item"><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
   </ul>
