--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <%= link_to "ALPHA BLOG", root_path, class: "navbar-brand", id: "logo" %>
+    <%= link_to "wooden Web Log", root_path, class: "navbar-brand", id: "logo" %>
     <button
       class="navbar-toggler"
       type="button"
