--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
         <h1 class="display-5 fw-bold text-white">Wooden Web Log</h1>
         <p class="col-md-8 mx-auto text-white">The wooden web log is dedicated to wood working and sharing knowledge.</p>
         <p class="col-md-6mx-auto text-white">We are a community of woodworkers and makers working together to build...</p>
-        <button class="btn btn-primary btn-lg" type="button">Sign Up</button>
+        <%= link_to "Sign Up !", signup_path, class: "btn btn-primary btn-lg"%>
       </div>
     </div>
   </div>
