--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%#= link_to "Articles", articles_path, class: "nav-link text-white"%>
+         <%= link_to "Loggers", users_path, class: "nav-link text-white"%>
         </li>
         
         <li class="nav-item dropdown">
