--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -6,7 +6,11 @@
       <div class="container ">
         <div class="card text-center shadow mb-5 bg-body rounded">
           <div class="card-header bg-secondary text-white">
-            <em>by <%= article.user.username if article.user %></em>
+            <em>
+            <%if article.user%>
+            by <%= link_to article.user.username, user_path(article.user), class: "text-light"  %>
+            <%end%>
+            </em>
           </div>
           <div class="card-body ">
             <h5 class="card-title "><%=link_to article.title, article_path(article), class: "text-success" %></h5>
