--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,9 @@
 <h1 class="text-center mt-4"><%=@user.username %>'s profile</h1>
 
 <%= avatar_for @user, size: '250x250' %>
+<div class="text-center mt-4">
+  <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-outline-info" %>
+</div>
 
 <h3 class="text-center mt-4">Articles</h3>
 
