--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,10 @@
 
 <h1 class="text-center mt-4">Articles Listing Page</h1>
-<%= render 'article' %>
-
   
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+<%= render 'article' %>
+<div class="flickr_pagination pb-4 mb-5">
+  <%= will_paginate @articles, :container => false %>
+</div>
