--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -36,6 +36,12 @@
             <li><%= link_to "About", about_path, class: "dropdown-item" %>
           </ul>
         </li>
+        <li class="nav-item">
+          <%= link_to "Log In", login_path, class: "nav-link text-white"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Log Out", logout_path, class: "nav-link text-white", method: :delete %>
+        </li>
         
       </ul>
       <form class="d-flex" role="search">
