add current_user and logged_in? helper method, updated nav bar-> logged_in? and logged in new signups, refactor user controller with set_user before action/method

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,7 @@
     <div class="d-flex align-items-center">Copyright &copy;<%=link_to "Mark T Graybill", "https://www.marktgraybill.com", class: "text-white" %></div>
   </small>
   </div>
+  <div class="d-flex align-items-center text-white">Thank you&nbsp; <%=link_to "Robohash", "https://www.robohash.com", class: "text-light" %>&nbsp; for the awesome avatars.</div>
   
   
   <ul class="nav col-md-4 justify-content-end ">
