--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -12,8 +12,10 @@
           <div class="card-body ">
           <h5 class="card-title "><%=link_to avatar_for(user, size: '150x150'), user %></h5>
             <p class="card-text"><%= pluralize(user.articles.count, 'article')%></p>
-            <%= link_to 'View Profile', user_path(user),  class: "btn btn-outline-success" %>
-            <%= link_to 'Edit Profile', edit_user_path(user), class: "btn btn-outline-info" %>
+              <%= link_to 'View Profile', user_path(user),  class: "btn btn-outline-success" %>
+            <% if logged_in? && user == current_user %>
+              <%= link_to 'Edit Profile', edit_user_path(user), class: "btn btn-outline-info" %>
+            <% end %>
           </div>
           <div class="card-footer bg-secondary text-white-50 ">
             <small>Joined  <%= time_ago_in_words(user.created_at) %> ago</small>
