--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,12 @@
 <h1 class="text-center mt-4"><%=@user.username %>'s profile</h1>
 
 <%= avatar_for @user, size: '250x250' %>
+
+<% if logged_in? && @user == current_user %>
 <div class="text-center mt-4">
   <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-outline-info" %>
 </div>
+<% end %>
 
 <h3 class="text-center mt-4">Articles</h3>
 <div class="flickr_pagination">
