--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
 <% if logged_in? && @user == current_user %>
 <div class="text-center mt-4">
   <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-outline-info" %>
+  <%= link_to 'Create New Article', new_article_path, class: "btn btn-outline-success" %>
 </div>
 <% end %>
 
