Add '[Admin]' to navbar for admin users, article actions available to admins for all articles, user delete available for admin user

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -49,7 +49,7 @@
             aria-expanded="false"
           >
           <div class="d-inline-flex">
-            <%= current_user.username %>&nbsp;<%= avatar_for current_user, size: '25x25' %>
+            <%= "[Admin]" if current_user.admin? %>&nbsp;<%= current_user.username %>&nbsp;<%= avatar_for current_user, size: '25x25' %>
           </div>
           </a>
           <ul class="dropdown-menu">
