--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,9 +14,10 @@
           </div>
           <div class="card-body ">
             <div class="card-text text-left"><%=simple_format(@article.description)%></div>
-            <% if logged_in? && @article.user == current_user %>
+            <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
               <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
-              <%= link_to 'Delete', article_path(@article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+              <%= link_to 'Delete', article_path(@article), class: "btn btn-outline-danger", method: :delete,
+               data: {confirm: "Are you sure?"} %>
             <%end%>
           </div>
           <div class="card-footer bg-secondary text-white-50 ">
