add categories select to navbar

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -30,12 +30,30 @@
           </a>
           <ul class="dropdown-menu">
             <% if logged_in? %>
-              <li><%= link_to "Create New", new_article_path, class: "dropdown-item" %></li>
+              <li><%= link_to "Create New Article", new_article_path, class: "dropdown-item" %></li>
             <%end%>
-            <li><%= link_to "View All", articles_path, class: "dropdown-item"%></li>
+            <li><%= link_to "View All Articles", articles_path, class: "dropdown-item"%></li>
             <li><hr class="dropdown-divider" /></li>
             <li><%= link_to "Home", root_path, class: "dropdown-item" %>
             <li><%= link_to "About", about_path, class: "dropdown-item" %>
+          </ul>
+        </li>
+        
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Categories
+          </a>
+          <ul class="dropdown-menu">
+            <% if logged_in? && current_user.admin? %>
+              <li><%= link_to "Create New Category", new_category_path, class: "dropdown-item" %></li>
+            <%end%>
+            <li><%= link_to "View All Categories", categories_path, class: "dropdown-item"%></li>
           </ul>
         </li>
 
