--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,6 +18,15 @@
             <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description of Article" %>
           </div>
         </div>
+
+        <div class="form-group row">
+          <%= f.label :category, class: "col-2 col-form-label text-light" %>
+          <div class="col-10"> 
+            <%= f.collection_select :category_ids, Category.order(:name), :id, :name,
+            {prompt: "Select Categories"}, {multiple: true, size: "4", class: "custom-select shadow-rounded" } %>
+          </div>
+        </div>
+
         <div class="form-group row justify-content-center">
           <%= f.submit class: "btn btn-outline-light btn-lg" %>
         </div>
