add category_partial, add category display to article cards, display number of articles associated with each category, add edit and update actions to category model/controller

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,11 @@
-
-  <h1 class="text-center mt-4">New Article</h1>
-  <%= render 'form' %>
+<h1 class="text-center mt-4">New Article</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'form' %>
+    </div>
+    <div class="mb-3">
+      <%= link_to '[ Cancel and Return to Articles listings ]', articles_path, class: "text-info" %>
+    </div>
+  </div>
+</div>
