--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,6 +12,7 @@
         <div class="card text-center shadow mb-5 bg-body rounded">
           <div class="card-body ">
             <h5 class="card-title "><%=link_to category.name, category_path(category), class: "text-success" %></h5>
+            <p class="card-text"><%= pluralize(category.articles.count, 'article')%></p>
           </div>
           <div class="card-footer bg-secondary text-white-50 ">
             <small>Created <%= time_ago_in_words(category.created_at) %> ago -- Updated <%=time_ago_in_words(category.updated_at) %> ago</small>
