--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,19 @@
 <h1 class="text-center mt-4">Category: <%=@category.name %></h1>
+
+<% if logged_in? && current_user.admin? %>
+<div class="text-center mt-4">
+  <%= link_to 'Edit Category', edit_category_path(@category), class: "btn btn-outline-info" %>
+  <%= link_to 'Create New Category', new_category_path, class: "btn btn-outline-success" %>
+</div>
+<% end %>
+
+<h3 class="text-center mt-4">Articles</h3>
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
+<%= render 'articles/article' %>
+
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
